imagePullPolicy/constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPullPolicy
metadata:
  name: image-pull-policy
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    policy: ["Always"]
